--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="../src/css/style.css" rel="stylesheet" />
     <script type="module" src="js/main.js"></script>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
