dynamic country dropdown added, localStorage for the country saved

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,9 @@
     </header>
     <main>
       <div id="locationInfo" class="p-3"></div>
-      <div id="newsContainer" class="bg-primary text-white p-3"></div>
+      <div id="countrySelectContainer"></div>
+
+      <div id="newsContainer" class="text-white p-3"></div>
     </main>
     <footer></footer>
   </body>
