--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,7 @@
         <!-- Articles Container -->
         <div id="newsContainer"></div>
       </div>
+      <div id="pagination" class="d-flex justify-content-center mt-4"></div>
     </main>
     <!-- Preview Modal -->
     <div class="modal fade" id="articleModal" tabindex="-1">
